# Aptamers_Model

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup-env.sh
conf/: config_1_init.yaml  config_1_init_encode.yaml  config_mult.yaml
new_scripts_5_10/: config.py  data_setup.py  model_1.py  requirements.txt  requirements.txt.orig  test.pth  train.py  train_with_logs.py  train_with_logs_2.py  train_with_logs_mirna.py  train_with_logs_mirna_balanced.py  train_with_logs_mirna_balanced_MultAttention.py  utils.py
src/models/: model_1_encode_kld.py  model_1_init.py  model_1_init_encode.py
src/training/: finetune_train_with_logs_mirna_balanced_MultAttention.py  finetune_train_with_logs_mirna_balanced_MultAttention_4_data_tokenizer.py  finetune_train_with_logs_mirna_balanced_encoder.py  finetune_train_with_logs_mirna_balanced_encoder_4_tokenizer.py  finetune_train_with_logs_mirna_balanced_encoder_4_tokenizer_autocast_profiler.py  finetune_train_with_logs_mirna_balanced_encoder_auto.py  finetune_train_with_logs_mirna_balanced_encoder_kld.py  finetune_train_with_logs_mirna_balanced_encoder_kld_auto.py  finetune_train_with_logs_mirna_balanced_encoder_kld_auto_autocast.py  finetune_train_with_logs_mirna_balanced_encoder_kld_copy.py  generate_aptamers.py  train.py  train_with_logs.py  train_with_logs_2.py  train_with_logs_mirna.py  train_with_logs_mirna_balanced.py  train_with_logs_mirna_balanced_3.py  train_with_logs_mirna_balanced_MultAttention.py  train_with_logs_mirna_balanced_encoder.py  train_with_logs_mirna_balanced_init.py  (+1 more)
src/utils/: data_setup.py  (+4 more)
