[project]
name = "aptamers-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[s3]>=3.63.0",
    "hydra-core>=1.3.2",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
